added first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Github Repu</title>
+    <link rel="stylesheet" a href="styles/style.css">
 </head>
 <body>
-    
+    <div>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure nesciunt quo adipisci eum eos, dicta magnam voluptate aperiam necessitatibus dolor obcaecati nisi quae, facere, repellat quisquam sapiente a itaque error?
+        Mollitia dolor nisi corporis vero consequuntur architecto iure perspiciatis eligendi fugiat id totam ipsam consequatur aliquid delectus praesentium reiciendis at dignissimos autem, eos est ad quisquam. Accusamus rerum inventore magnam.
+    </div>
 </body>
 </html>
