added the second and third blog

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 </head>
 <body>
     <div>
+    <h2>First Bolog</h2>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure nesciunt quo adipisci eum eos, dicta magnam voluptate aperiam necessitatibus dolor obcaecati nisi quae, facere, repellat quisquam sapiente a itaque error?
+        Mollitia dolor nisi corporis vero consequuntur architecto iure perspiciatis eligendi fugiat id totam ipsam consequatur aliquid delectus praesentium reiciendis at dignissimos autem, eos est ad quisquam. Accusamus rerum inventore magnam.
+    </div>
+     <div>
+    <h2>Second Bolog</h2>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure nesciunt quo adipisci eum eos, dicta magnam voluptate aperiam necessitatibus dolor obcaecati nisi quae, facere, repellat quisquam sapiente a itaque error?
+        Mollitia dolor nisi corporis vero consequuntur architecto iure perspiciatis eligendi fugiat id totam ipsam consequatur aliquid delectus praesentium reiciendis at dignissimos autem, eos est ad quisquam. Accusamus rerum inventore magnam.
+    </div>
+     <div>
+    <h2>Third Bolog</h2>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure nesciunt quo adipisci eum eos, dicta magnam voluptate aperiam necessitatibus dolor obcaecati nisi quae, facere, repellat quisquam sapiente a itaque error?
         Mollitia dolor nisi corporis vero consequuntur architecto iure perspiciatis eligendi fugiat id totam ipsam consequatur aliquid delectus praesentium reiciendis at dignissimos autem, eos est ad quisquam. Accusamus rerum inventore magnam.
     </div>
