add sakib picture

--- a/index.html
+++ b/index.html
@@ -31,5 +31,9 @@
             <li>Jack-fruit</li>
         </ul>
     </div>
+    <div>
+        <h3>Sakib Picture</h3>
+        <img src="images/image.jpg" alt="sakib" height="300px" width="400px">
+    </div>
 </body>
 </html>
